--- a/week-4/2-medium-course-selling-app-admin-dashboard/package.json
+++ b/week-4/2-medium-course-selling-app-admin-dashboard/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "todo-app-react",
+  "name": "2-medium-course-selling-app-admin-dashboard",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -11,7 +11,10 @@
   },
   "dependencies": {
     "axios": "^1.5.1",
-    "react": "^18.2.0"
+    "base-64": "^1.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.16.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
